# OCR_WebApp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
ocr_webapp/: __init__.py
ocr_webapp/api/: __init__.py  app.py  routes.py
ocr_webapp/core/: __init__.py  ocr_engine.py
ocr_webapp/models/: __init__.py  ocr.py
ocr_webapp/plugins/: __init__.py  base.py
ocr_webapp/services/: __init__.py
ocr_webapp/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/integration/: test_health.py
tests/unit/: test_plugin_registry.py
